gateway-haproxy/templates/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: haproxy-gatewayclass
spec:
  controllerName: haproxy.org/gateway-controller
