gateway-haproxy/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-gateway
spec:
  gatewayClassName: haproxy-gatewayclass
  listeners:
    - name: tcp-listener
      port: 80
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
    # - name: argocd-listener
    #   port: 443
    #   protocol: HTTPS
    #   hostname: "argocd.dvoc24.v3nc.org"
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     certificateRefs:
    #     - kind: Secret
    #       group: ""
    #       name: argocd-dvoc24-v3nc-org
    # - name: pacman-listener
    #   port: 443
    #   protocol: HTTPS
    #   hostname: "pacman.dvoc24.v3nc.org"
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     certificateRefs:
    #     - kind: Secret
    #       group: ""
    #       name: pacman-dvoc24-v3nc-org
    #     mode: Terminate
